// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alexaSkill reports snapshot 1`] = `
Object {
  "@iopipe/event-info.alexaSkill.context.AudioPlayer.offsetInMilliseconds": 0,
  "@iopipe/event-info.alexaSkill.context.AudioPlayer.playerActivity": "IDLE",
  "@iopipe/event-info.alexaSkill.context.AudioPlayer.token": "audioplayer-token",
  "@iopipe/event-info.alexaSkill.context.System.apiEndpoint": "https://api.amazonalexa.com",
  "@iopipe/event-info.alexaSkill.context.System.application.applicationId": "amzn1.ask.skill.[unique-value-here]",
  "@iopipe/event-info.alexaSkill.context.System.user.userId": "amzn1.ask.account.[unique-value-here]",
  "@iopipe/event-info.alexaSkill.request.intent.name": "AnswerIntent",
  "@iopipe/event-info.alexaSkill.request.intent.slots.Item.name": "Item",
  "@iopipe/event-info.alexaSkill.request.intent.slots.Item.value": "snowball",
  "@iopipe/event-info.alexaSkill.request.locale": "en-US",
  "@iopipe/event-info.alexaSkill.request.requestId": "amzn1.echo-api.request.[unique-value-here]",
  "@iopipe/event-info.alexaSkill.request.timestamp": "2016-10-27T18:21:44Z",
  "@iopipe/event-info.alexaSkill.request.type": "LaunchRequest",
  "@iopipe/event-info.alexaSkill.session.application.applicationId": "amzn1.ask.skill.[unique-value-here]",
  "@iopipe/event-info.alexaSkill.session.attributes.STATE": "_TRIVIAMODE",
  "@iopipe/event-info.alexaSkill.session.attributes.correctAnswerIndex": 3,
  "@iopipe/event-info.alexaSkill.session.attributes.correctAnswerText": "Donner",
  "@iopipe/event-info.alexaSkill.session.attributes.currentQuestionIndex": 0,
  "@iopipe/event-info.alexaSkill.session.attributes.key": "string value",
  "@iopipe/event-info.alexaSkill.session.attributes.questions.0": 16,
  "@iopipe/event-info.alexaSkill.session.attributes.questions.1": 20,
  "@iopipe/event-info.alexaSkill.session.attributes.questions.2": 29,
  "@iopipe/event-info.alexaSkill.session.attributes.questions.3": 2,
  "@iopipe/event-info.alexaSkill.session.attributes.questions.4": 19,
  "@iopipe/event-info.alexaSkill.session.attributes.repromptText": "Question 1. What was Rudolph's father's name? 1. Blixen. 2. Comet. 3. Donner. 4. Dasher. ",
  "@iopipe/event-info.alexaSkill.session.attributes.score": 0,
  "@iopipe/event-info.alexaSkill.session.attributes.speechOutput": "Question 1. What was Rudolph's father's name? 1. Blixen. 2. Comet. 3. Donner. 4. Dasher. ",
  "@iopipe/event-info.alexaSkill.session.new": true,
  "@iopipe/event-info.alexaSkill.session.sessionId": "amzn1.echo-api.session.[unique-value-here]",
  "@iopipe/event-info.alexaSkill.session.user.userId": "amzn1.ask.account.[unique-value-here]",
  "@iopipe/event-info.alexaSkill.version": "1.0",
  "@iopipe/event-info.eventType": "alexaSkill",
}
`;

exports[`alexaSkill reports snapshot 2`] = `
Set {
  "@iopipe/plugin-event-info",
  "@iopipe/aws-alexa-skill",
}
`;

exports[`alexaSkill reports snapshot 3`] = `
Object {
  "@iopipe/event-info.alexaSkill.context.AudioPlayer.offsetInMilliseconds": 0,
  "@iopipe/event-info.alexaSkill.context.AudioPlayer.playerActivity": "IDLE",
  "@iopipe/event-info.alexaSkill.context.AudioPlayer.token": "audioplayer-token",
  "@iopipe/event-info.alexaSkill.context.System.apiEndpoint": "https://api.amazonalexa.com",
  "@iopipe/event-info.alexaSkill.context.System.application.applicationId": "amzn1.ask.skill.[unique-value-here]",
  "@iopipe/event-info.alexaSkill.context.System.user.userId": "amzn1.ask.account.[unique-value-here]",
  "@iopipe/event-info.alexaSkill.request.intent.name": "AnswerIntent",
  "@iopipe/event-info.alexaSkill.request.intent.slots.Item.name": "Item",
  "@iopipe/event-info.alexaSkill.request.intent.slots.Item.value": "snowball",
  "@iopipe/event-info.alexaSkill.request.locale": "en-US",
  "@iopipe/event-info.alexaSkill.request.requestId": "amzn1.echo-api.request.[unique-value-here]",
  "@iopipe/event-info.alexaSkill.request.timestamp": "2016-10-27T18:21:44Z",
  "@iopipe/event-info.alexaSkill.request.type": "LaunchRequest",
  "@iopipe/event-info.alexaSkill.session.application.applicationId": "amzn1.ask.skill.[unique-value-here]",
  "@iopipe/event-info.alexaSkill.session.attributes.STATE": "_TRIVIAMODE",
  "@iopipe/event-info.alexaSkill.session.attributes.correctAnswerIndex": 3,
  "@iopipe/event-info.alexaSkill.session.attributes.correctAnswerText": "Donner",
  "@iopipe/event-info.alexaSkill.session.attributes.currentQuestionIndex": 0,
  "@iopipe/event-info.alexaSkill.session.attributes.key": "string value",
  "@iopipe/event-info.alexaSkill.session.attributes.questions.0": 16,
  "@iopipe/event-info.alexaSkill.session.attributes.questions.1": 20,
  "@iopipe/event-info.alexaSkill.session.attributes.questions.2": 29,
  "@iopipe/event-info.alexaSkill.session.attributes.questions.3": 2,
  "@iopipe/event-info.alexaSkill.session.attributes.questions.4": 19,
  "@iopipe/event-info.alexaSkill.session.attributes.repromptText": "Question 1. What was Rudolph's father's name? 1. Blixen. 2. Comet. 3. Donner. 4. Dasher. ",
  "@iopipe/event-info.alexaSkill.session.attributes.score": 0,
  "@iopipe/event-info.alexaSkill.session.attributes.speechOutput": "Question 1. What was Rudolph's father's name? 1. Blixen. 2. Comet. 3. Donner. 4. Dasher. ",
  "@iopipe/event-info.alexaSkill.session.new": true,
  "@iopipe/event-info.alexaSkill.session.sessionId": "amzn1.echo-api.session.[unique-value-here]",
  "@iopipe/event-info.alexaSkill.session.user.userId": "amzn1.ask.account.[unique-value-here]",
  "@iopipe/event-info.alexaSkill.version": "1.0",
  "@iopipe/event-info.eventType": "alexaSkill",
}
`;

exports[`apiGateway reports snapshot 1`] = `
Object {
  "@iopipe/event-info.apiGateway.httpMethod": "GET",
  "@iopipe/event-info.apiGateway.path": "/test/hello",
  "@iopipe/event-info.apiGateway.requestContext.accountId": "123456789012",
  "@iopipe/event-info.apiGateway.requestContext.httpMethod": "GET",
  "@iopipe/event-info.apiGateway.requestContext.identity.userAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/52.0.2743.82 Safari/537.36 OPR/39.0.2256.48",
  "@iopipe/event-info.apiGateway.requestContext.requestId": "41b45ea3-70b5-11e6-b7bd-69b5aaebc7d9",
  "@iopipe/event-info.apiGateway.requestContext.resourcePath": "/{proxy+}",
  "@iopipe/event-info.apiGateway.requestContext.stage": "test",
  "@iopipe/event-info.apiGateway.resource": "/{proxy+}",
  "@iopipe/event-info.eventType": "apiGateway",
}
`;

exports[`apiGateway reports snapshot 2`] = `
Set {
  "@iopipe/plugin-event-info",
  "@iopipe/aws-api-gateway",
}
`;

exports[`apiGateway reports snapshot 3`] = `
Object {
  "@iopipe/event-info.apiGateway.httpMethod": "GET",
  "@iopipe/event-info.apiGateway.path": "/test/hello",
  "@iopipe/event-info.apiGateway.requestContext.accountId": "123456789012",
  "@iopipe/event-info.apiGateway.requestContext.httpMethod": "GET",
  "@iopipe/event-info.apiGateway.requestContext.identity.userAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/52.0.2743.82 Safari/537.36 OPR/39.0.2256.48",
  "@iopipe/event-info.apiGateway.requestContext.requestId": "41b45ea3-70b5-11e6-b7bd-69b5aaebc7d9",
  "@iopipe/event-info.apiGateway.requestContext.resourcePath": "/{proxy+}",
  "@iopipe/event-info.apiGateway.requestContext.stage": "test",
  "@iopipe/event-info.apiGateway.resource": "/{proxy+}",
  "@iopipe/event-info.eventType": "apiGateway",
}
`;

exports[`cloudFront reports snapshot 1`] = `
Object {
  "@iopipe/event-info.cloudFront.Records[0].cf.config.distributionId": "EDFDVBD6EXAMPLE",
  "@iopipe/event-info.cloudFront.Records[0].cf.request.clientIp": "2001:0db8:85a3:0:0:8a2e:0370:7334",
  "@iopipe/event-info.cloudFront.Records[0].cf.request.headers.[\\"user-agent\\"][0].value": "curl/7.51.0",
  "@iopipe/event-info.cloudFront.Records[0].cf.request.headers.host[0].value": "d111111abcdef8.cloudfront.net",
  "@iopipe/event-info.cloudFront.Records[0].cf.request.method": "GET",
  "@iopipe/event-info.cloudFront.Records[0].cf.request.uri": "/picture.jpg",
  "@iopipe/event-info.eventType": "cloudFront",
}
`;

exports[`cloudFront reports snapshot 2`] = `
Set {
  "@iopipe/plugin-event-info",
  "@iopipe/aws-cloud-front",
}
`;

exports[`cloudFront reports snapshot 3`] = `
Object {
  "@iopipe/event-info.cloudFront.Records[0].cf.config.distributionId": "EDFDVBD6EXAMPLE",
  "@iopipe/event-info.cloudFront.Records[0].cf.request.clientIp": "2001:0db8:85a3:0:0:8a2e:0370:7334",
  "@iopipe/event-info.cloudFront.Records[0].cf.request.headers.[\\"user-agent\\"][0].value": "curl/7.51.0",
  "@iopipe/event-info.cloudFront.Records[0].cf.request.headers.host[0].value": "d111111abcdef8.cloudfront.net",
  "@iopipe/event-info.cloudFront.Records[0].cf.request.method": "GET",
  "@iopipe/event-info.cloudFront.Records[0].cf.request.uri": "/picture.jpg",
  "@iopipe/event-info.eventType": "cloudFront",
}
`;

exports[`firehose reports snapshot 1`] = `
Object {
  "@iopipe/event-info.eventType": "firehose",
  "@iopipe/event-info.firehose.deliveryStreamArn": "aws:lambda:events",
  "@iopipe/event-info.firehose.records.length": 2,
  "@iopipe/event-info.firehose.region": "us-west-2",
}
`;

exports[`firehose reports snapshot 2`] = `
Set {
  "@iopipe/plugin-event-info",
  "@iopipe/aws-firehose",
}
`;

exports[`firehose reports snapshot 3`] = `
Object {
  "@iopipe/event-info.eventType": "firehose",
  "@iopipe/event-info.firehose.deliveryStreamArn": "aws:lambda:events",
  "@iopipe/event-info.firehose.records.length": 2,
  "@iopipe/event-info.firehose.region": "us-west-2",
}
`;

exports[`kinesis reports snapshot 1`] = `
Object {
  "@iopipe/event-info.eventType": "kinesis",
  "@iopipe/event-info.kinesis.Records.length": 1,
  "@iopipe/event-info.kinesis.Records[0].awsRegion": "us-east-1",
  "@iopipe/event-info.kinesis.Records[0].eventSourceARN": "event-source-arn",
}
`;

exports[`kinesis reports snapshot 2`] = `
Set {
  "@iopipe/plugin-event-info",
  "@iopipe/aws-kinesis",
}
`;

exports[`kinesis reports snapshot 3`] = `
Object {
  "@iopipe/event-info.eventType": "kinesis",
  "@iopipe/event-info.kinesis.Records.length": 1,
  "@iopipe/event-info.kinesis.Records[0].awsRegion": "us-east-1",
  "@iopipe/event-info.kinesis.Records[0].eventSourceARN": "event-source-arn",
}
`;

exports[`s3 reports snapshot 1`] = `
Object {
  "@iopipe/event-info.eventType": "s3",
  "@iopipe/event-info.s3.Records[0].awsRegion": "us-east-1",
  "@iopipe/event-info.s3.Records[0].eventName": "event-type",
  "@iopipe/event-info.s3.Records[0].eventTime": "1970-01-01T00:00:00.000Z",
  "@iopipe/event-info.s3.Records[0].requestParameters.sourceIPAddress": "ip-address-where-request-came-from",
  "@iopipe/event-info.s3.Records[0].responseElements[\\"x-amz-id-2\\"]": "Amazon S3 host that processed the request",
  "@iopipe/event-info.s3.Records[0].responseElements[\\"x-amz-request-id\\"]": "Amazon S3 generated request ID",
  "@iopipe/event-info.s3.Records[0].s3.bucket.arn": "bucket-ARN",
  "@iopipe/event-info.s3.Records[0].s3.bucket.name": "bucket-name",
  "@iopipe/event-info.s3.Records[0].s3.object.key": "object-key",
  "@iopipe/event-info.s3.Records[0].s3.object.sequencer": "a string representation of a hexadecimal value used to determine event sequence, only used with PUTs and DELETEs",
  "@iopipe/event-info.s3.Records[0].s3.object.size": 10,
  "@iopipe/event-info.s3.Records[0].userIdentity.principalId": "Amazon-customer-ID-of-the-user-who-caused-the-event",
}
`;

exports[`s3 reports snapshot 2`] = `
Set {
  "@iopipe/plugin-event-info",
  "@iopipe/aws-s3",
}
`;

exports[`s3 reports snapshot 3`] = `
Object {
  "@iopipe/event-info.eventType": "s3",
  "@iopipe/event-info.s3.Records[0].awsRegion": "us-east-1",
  "@iopipe/event-info.s3.Records[0].eventName": "event-type",
  "@iopipe/event-info.s3.Records[0].eventTime": "1970-01-01T00:00:00.000Z",
  "@iopipe/event-info.s3.Records[0].requestParameters.sourceIPAddress": "ip-address-where-request-came-from",
  "@iopipe/event-info.s3.Records[0].responseElements[\\"x-amz-id-2\\"]": "Amazon S3 host that processed the request",
  "@iopipe/event-info.s3.Records[0].responseElements[\\"x-amz-request-id\\"]": "Amazon S3 generated request ID",
  "@iopipe/event-info.s3.Records[0].s3.bucket.arn": "bucket-ARN",
  "@iopipe/event-info.s3.Records[0].s3.bucket.name": "bucket-name",
  "@iopipe/event-info.s3.Records[0].s3.object.key": "object-key",
  "@iopipe/event-info.s3.Records[0].s3.object.sequencer": "a string representation of a hexadecimal value used to determine event sequence, only used with PUTs and DELETEs",
  "@iopipe/event-info.s3.Records[0].s3.object.size": 10,
  "@iopipe/event-info.s3.Records[0].userIdentity.principalId": "Amazon-customer-ID-of-the-user-who-caused-the-event",
}
`;

exports[`scheduled reports snapshot 1`] = `
Object {
  "@iopipe/event-info.eventType": "scheduled",
  "@iopipe/event-info.scheduled.account": "123456789012",
  "@iopipe/event-info.scheduled.id": "cdc73f9d-aea9-11e3-9d5a-835b769c0d9c",
  "@iopipe/event-info.scheduled.region": "us-east-1",
  "@iopipe/event-info.scheduled.resources[0]": "arn:aws:events:us-east-1:123456789012:rule/my-schedule",
  "@iopipe/event-info.scheduled.time": "1970-01-01T00:00:00Z",
}
`;

exports[`scheduled reports snapshot 2`] = `
Set {
  "@iopipe/plugin-event-info",
  "@iopipe/aws-scheduled",
}
`;

exports[`scheduled reports snapshot 3`] = `
Object {
  "@iopipe/event-info.eventType": "scheduled",
  "@iopipe/event-info.scheduled.account": "123456789012",
  "@iopipe/event-info.scheduled.id": "cdc73f9d-aea9-11e3-9d5a-835b769c0d9c",
  "@iopipe/event-info.scheduled.region": "us-east-1",
  "@iopipe/event-info.scheduled.resources[0]": "arn:aws:events:us-east-1:123456789012:rule/my-schedule",
  "@iopipe/event-info.scheduled.time": "1970-01-01T00:00:00Z",
}
`;

exports[`slsIntegrationLambda reports snapshot 1`] = `
Object {
  "@iopipe/event-info.apiGateway.headers.X-Amz-Cf-Id": "l06CAg2QsrALeQcLAUSxGXbm8lgMoMIhR2AjKa4AiKuaVnnGsOFy5g==",
  "@iopipe/event-info.apiGateway.headers.X-Amzn-Trace-Id": "Root=1-5970ef3e249c0321b2eef14aa513ae",
  "@iopipe/event-info.apiGateway.httpMethod": "GET",
  "@iopipe/event-info.apiGateway.requestContext.accountId": "1234",
  "@iopipe/event-info.apiGateway.requestContext.httpMethod": "GET",
  "@iopipe/event-info.apiGateway.requestContext.identity.userAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_5) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36",
  "@iopipe/event-info.apiGateway.requestContext.stage": "dev",
  "@iopipe/event-info.eventType": "apiGateway",
  "@iopipe/event-info.eventType.source": "slsIntegrationLambda",
}
`;

exports[`slsIntegrationLambda reports snapshot 2`] = `
Set {
  "@iopipe/plugin-event-info",
  "@iopipe/aws-sls-integration-lambda",
}
`;

exports[`slsIntegrationLambda reports snapshot 3`] = `
Object {
  "@iopipe/event-info.apiGateway.headers.X-Amz-Cf-Id": "l06CAg2QsrALeQcLAUSxGXbm8lgMoMIhR2AjKa4AiKuaVnnGsOFy5g==",
  "@iopipe/event-info.apiGateway.headers.X-Amzn-Trace-Id": "Root=1-5970ef3e249c0321b2eef14aa513ae",
  "@iopipe/event-info.apiGateway.httpMethod": "GET",
  "@iopipe/event-info.apiGateway.requestContext.accountId": "1234",
  "@iopipe/event-info.apiGateway.requestContext.httpMethod": "GET",
  "@iopipe/event-info.apiGateway.requestContext.identity.userAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_5) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36",
  "@iopipe/event-info.apiGateway.requestContext.stage": "dev",
  "@iopipe/event-info.eventType": "apiGateway",
  "@iopipe/event-info.eventType.source": "slsIntegrationLambda",
}
`;

exports[`sns reports snapshot 1`] = `
Object {
  "@iopipe/event-info.eventType": "sns",
  "@iopipe/event-info.sns.Records[0].EventSubscriptionArn": "arn:aws:sns:us-west-2:123456789000:ses_messages:26a58451-3392-4ab6-a829-d65c2968421a",
  "@iopipe/event-info.sns.Records[0].Sns.MessageId": "483eae4c-4fb0-57e5-a5f9-ff9b08612bef",
  "@iopipe/event-info.sns.Records[0].Sns.Signature": "Uy3tn/qAQg/sXARGk2DRddd31ZtyDE+B1IzRla/KA75BaerApJqN+H59q69z8H+pRx0AyUwOD1K0huBYdDRbAMVOUsMgZgdcNjj0gSfFg8uZvTuKaqTaWj4E0hmzoemHENWeuswuq3l6xoPcAJ9fHd2yFhX+792AV++i/8P4EKv/9I4j8Ejs3OxMRN49gkWefKbv4/avyHOdSaFTnXV0rGLmPb103dtjeY4K05PTKvUlPerN+MdRTvHrjApvqDvP0NEVyYBU4zFZQ6GnFcFnHtTk44c3NH/dVi6Gf9VrX8V1id5VSZICYiIG1iaUZ0b676IhRh8znzjMDWaczOBwkA==",
  "@iopipe/event-info.sns.Records[0].Sns.SignatureVersion": "1",
  "@iopipe/event-info.sns.Records[0].Sns.SigningCertUrl": "https://sns.us-west-2.amazonaws.com/SimpleNotificationService-b95095beb82e8f6a046b3aafc7f4149a.pem",
  "@iopipe/event-info.sns.Records[0].Sns.Subject": "This is a test subject",
  "@iopipe/event-info.sns.Records[0].Sns.Timestamp": "2017-07-05T20:01:21.366Z",
  "@iopipe/event-info.sns.Records[0].Sns.TopicArn": "arn:aws:sns:us-west-2:123456789000:ses_messages",
  "@iopipe/event-info.sns.Records[0].Sns.Type": "Notification",
  "@iopipe/event-info.sns.Records[0].Sns.UnsubscribeUrl": "https://sns.us-west-2.amazonaws.com/?Action=Unsubscribe&eifjccgihujihfhrchunfnglreichbrcljrnlvtbeked",
}
`;

exports[`sns reports snapshot 2`] = `
Set {
  "@iopipe/plugin-event-info",
  "@iopipe/aws-sns",
}
`;

exports[`sns reports snapshot 3`] = `
Object {
  "@iopipe/event-info.eventType": "sns",
  "@iopipe/event-info.sns.Records[0].EventSubscriptionArn": "arn:aws:sns:us-west-2:123456789000:ses_messages:26a58451-3392-4ab6-a829-d65c2968421a",
  "@iopipe/event-info.sns.Records[0].Sns.MessageId": "483eae4c-4fb0-57e5-a5f9-ff9b08612bef",
  "@iopipe/event-info.sns.Records[0].Sns.Signature": "Uy3tn/qAQg/sXARGk2DRddd31ZtyDE+B1IzRla/KA75BaerApJqN+H59q69z8H+pRx0AyUwOD1K0huBYdDRbAMVOUsMgZgdcNjj0gSfFg8uZvTuKaqTaWj4E0hmzoemHENWeuswuq3l6xoPcAJ9fHd2yFhX+792AV++i/8P4EKv/9I4j8Ejs3OxMRN49gkWefKbv4/avyHOdSaFTnXV0rGLmPb103dtjeY4K05PTKvUlPerN+MdRTvHrjApvqDvP0NEVyYBU4zFZQ6GnFcFnHtTk44c3NH/dVi6Gf9VrX8V1id5VSZICYiIG1iaUZ0b676IhRh8znzjMDWaczOBwkA==",
  "@iopipe/event-info.sns.Records[0].Sns.SignatureVersion": "1",
  "@iopipe/event-info.sns.Records[0].Sns.SigningCertUrl": "https://sns.us-west-2.amazonaws.com/SimpleNotificationService-b95095beb82e8f6a046b3aafc7f4149a.pem",
  "@iopipe/event-info.sns.Records[0].Sns.Subject": "This is a test subject",
  "@iopipe/event-info.sns.Records[0].Sns.Timestamp": "2017-07-05T20:01:21.366Z",
  "@iopipe/event-info.sns.Records[0].Sns.TopicArn": "arn:aws:sns:us-west-2:123456789000:ses_messages",
  "@iopipe/event-info.sns.Records[0].Sns.Type": "Notification",
  "@iopipe/event-info.sns.Records[0].Sns.UnsubscribeUrl": "https://sns.us-west-2.amazonaws.com/?Action=Unsubscribe&eifjccgihujihfhrchunfnglreichbrcljrnlvtbeked",
}
`;

exports[`sqs reports snapshot 1`] = `
Object {
  "@iopipe/event-info.eventType": "sqs",
  "@iopipe/event-info.sqs.Records[0].attributes.ApproximateFirstReceiveTimestamp": "1523232000001",
  "@iopipe/event-info.sqs.Records[0].attributes.ApproximateReceiveCount": "1",
  "@iopipe/event-info.sqs.Records[0].attributes.SenderId": "123456789012",
  "@iopipe/event-info.sqs.Records[0].attributes.SentTimestamp": "1523232000000",
  "@iopipe/event-info.sqs.Records[0].awsRegion": "us-east-1",
  "@iopipe/event-info.sqs.Records[0].eventSourceARN": "arn:aws:sqs:us-east-1:123456789012:MyQueue",
  "@iopipe/event-info.sqs.Records[0].md5OfBody": "7b270e59b47ff90a553787216d55d91d",
  "@iopipe/event-info.sqs.Records[0].messageId": "19dd0b57-b21e-4ac1-bd88-01bbb068cb78",
  "@iopipe/event-info.sqs.Records[0].receiptHandle": "MessageReceiptHandle",
}
`;

exports[`sqs reports snapshot 2`] = `
Set {
  "@iopipe/plugin-event-info",
  "@iopipe/aws-sqs",
}
`;

exports[`sqs reports snapshot 3`] = `
Object {
  "@iopipe/event-info.eventType": "sqs",
  "@iopipe/event-info.sqs.Records[0].attributes.ApproximateFirstReceiveTimestamp": "1523232000001",
  "@iopipe/event-info.sqs.Records[0].attributes.ApproximateReceiveCount": "1",
  "@iopipe/event-info.sqs.Records[0].attributes.SenderId": "123456789012",
  "@iopipe/event-info.sqs.Records[0].attributes.SentTimestamp": "1523232000000",
  "@iopipe/event-info.sqs.Records[0].awsRegion": "us-east-1",
  "@iopipe/event-info.sqs.Records[0].eventSourceARN": "arn:aws:sqs:us-east-1:123456789012:MyQueue",
  "@iopipe/event-info.sqs.Records[0].md5OfBody": "7b270e59b47ff90a553787216d55d91d",
  "@iopipe/event-info.sqs.Records[0].messageId": "19dd0b57-b21e-4ac1-bd88-01bbb068cb78",
  "@iopipe/event-info.sqs.Records[0].receiptHandle": "MessageReceiptHandle",
}
`;
